fix glass effect to expl and remove scrollbarfeom unnessecery place

--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ body{
     position: relative;
     height: 100vh;
     display: grid;
-    grid-template-rows:  70px 45px auto 1fr 50px 50px;
+    grid-template-rows:  70px 45px auto auto 1fr 50px 50px;
     grid-template-columns: 1fr;
     grid-template-areas: 
     "header" 
     "nav-bar" 
+    "expl"
     "main-content" 
     "side-bar" 
     "footer";
@@ -42,6 +43,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     -webkit-background-clip: text;
+    background-clip:text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -77,7 +79,7 @@ body{
     position: sticky;
     top: 5px;
     background-color: var(--background);
-    z-index: 1;
+    z-index: 2;
     max-width: var(--max-width);
 }
 .nav-bar .nav-list{
@@ -151,46 +153,99 @@ body{
     position: relative;
     margin-top: 5px;
     margin-left: 5px;
-    
-}
-.blured-background{
     background-image: url(./media/pictures/IMG-20230620-WA0006.jpg);
     width: 100vw;
     max-width: 900px;
     height: 500px;
-    filter: blur(7px);
-    z-index: 1;
-    position: relative;
-    top: 12px;
     background-repeat: no-repeat;
     background-size: cover;
-    
+    z-index: 1;
 }
+
 .hitext p{
-    font-size: 60px;
+    font-size: clamp(0.8rem,4vw , 3rem);
     z-index: 2;
-    background-color: rgba(0, 0, 0, 0.4);
-    position: absolute; 
-     top: 0px;
+    background-color: rgba(0, 0, 0, 0.1);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    /* position: absolute; 
+     top: 0px; */
      color: white;
      margin-top:10px;
      border-radius: 10px;
      padding: 20px;
      margin: 10px;
+     box-shadow: 5px 5px 20px 5px  rgba(235, 238, 234, 0.399) inset;
+     border:#128C7E solid 1px
 }
 .doron-img-third{
-    position: absolute;
+    /* position: absolute; */
     z-index:2;
-    right:10px;
-    width: calc(100% - 8px);
+    /* right:10px; */
+    width:  calc(100% - 8px);
     background-color: #badad788;
-    max-width: 300px;
+    max-width: 200px;
+    max-height: 200px;
     margin-top: 10px;
-    margin-left: 20px;
+    margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
     border-radius: 40%;
     filter: drop-shadow(25px -18px 22px rgba(62, 118, 67, 0.675)); /*offset-x offset-y blur-radius color*/
+}
+
+.expl{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+}
+.expl-item {
+    direction: rtl;
+    font-size: clamp(0.8rem,1.5vw , 0.5rem);
+    font-family:  Arial, Helvetica, sans-serif;
+    font-size: bold;
+    color:rgb(238, 240, 239);
+    line-height: 25px;
+    padding: 20px;
+    box-shadow: 10px 10px 25px 1px rgba(79, 178, 178, 0.8);
+    width: 43vw;
+    max-width: 500px;
+    height: fit-content;
+    max-height: 200px;
+    border: #333 solid 2px;
+    border-radius: 10px;
+    z-index: 2;
+    -webkit-backdrop-filter:blur(13px);
+    backdrop-filter: blur(13px);
+    background-color: rgb(88 87 87 / 40%);
+
+}
+.expl-item p{
+    margin-inline-end: 8px;
+}
+.read-more{
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 24px;
+    background-color: #128C7E;
+    width: 80px;
+}
+/* .expl p{
+    overflow: scroll;
+    text-overflow: ellipsis;
+} */
+.expl .over-flow-add{
+    overflow: scroll;
+    text-overflow: ellipsis;
+}
+.read-more:hover{
+    cursor: pointer;
+    background-color: #1ab8a5;
+    transform: scale(1.2);
+    transition: all 0.2s;
 }
 .main-content{
     box-sizing: border-box;
@@ -206,84 +261,10 @@ body{
     max-width: var(--max-width);
 }
 
-.expl{
-    position:relative;
-    width: 80vw;
-    max-width: var(--max-width);
-    /* background:var(--background); */
-    /* background:linear-gradient(180.43deg,rgba(26, 25, 25, 0.3)0%,rgba(44, 39, 39, 0.5)100%) , url(./media/pictures/background/20241101_144457.jpg);; */
-    background-repeat: no-repeat;
-    background-size:cover;
-    padding: 5px;
-    border-radius: 15px;
-    margin-bottom: -2px;
-    box-shadow: 10px 10px 25px 1px rgba(79, 178, 178, 0.8);
-    margin-left: auto;
-    margin-right: auto;
-    font-weight: 600;
-    
-}
-div .glass{
-    position: absolute;
-    width: 43vw;
-    max-width: 600px;
-    height: 200px;
-    /* border: #333 solid 2px; */
-    border-radius: 10px;
-    top: -298px;
-    z-index: 1;
-    -webkit-backdrop-filter:blur(13px);
-    backdrop-filter: blur(13px);
-    background-color: rgb(88 87 87 / 40%);
-}
-.expl-item {
-    direction: rtl;
-    font-size: clamp(0.8rem,1.5vw , 0.5rem);
-    font-family:  Arial, Helvetica, sans-serif;
-    font-size: bold;
-    color:rgb(238, 240, 239);
-    line-height: 25px;
-    padding: 20px;
-    
-    overflow: scroll;
-    text-overflow: ellipsis;
-    /* box-sizing: border-box; */
-    position: absolute;
-    width: 43vw;
-    max-width: 500px;
-    height: fit-content;
-    max-height: 200px;
-    /* border: #333 solid 2px; */
-    border-radius: 10px;
-    top: -298px;
-    z-index: 1;
-    -webkit-backdrop-filter:blur(13px);
-    backdrop-filter: blur(13px);
-    background-color: rgb(88 87 87 / 40%);
-
-}
 .movie-header{
     direction: rtl;
     min-width: 0.8rem;
     color: rgb(34, 58, 7);
-}
-.expl-item p{
-    margin-inline-end: 8px;
-}
-.read-more{
-    text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 24px;
-    background-color: #128C7E;
-    width: 80px;
-}
-.read-more:hover{
-    cursor: pointer;
-    background-color: #1ab8a5;
-    transform: scale(1.2);
-    transition: all 0.2s;
 }
 .main-movie video{
     border-radius: 10px;
